<resources>
    <string name="app_name" translatable="false">Bar Admin</string>
    <string name="sale">Sale</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="product">Product</string>
    <string name="x" translatable="false">x</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="cancel">Cancel</string>
    <string name="sale_finished">Sale finished</string>
    <string name="add">Add</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cancel_product">Cancel product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
</resources>